--- a/style/css/nav.css
+++ b/style/css/nav.css
@@ -26,9 +26,12 @@ nav {
   text-decoration: none;
   font-weight: bold;
   color: black;
-  padding-right: 5px;
 }
 .nav-pos {
   padding-left: 0px;
   margin-left: 15px;
+}
+li {
+  padding-right: 7px;
+  margin-right: 2px;
 }
