--- a/style/css/index.css
+++ b/style/css/index.css
@@ -1,3 +1,23 @@
 .img {
   float: left;
 }
+
+.table {
+  border-top: 3px solid black;
+  padding-left: 0;
+}
+
+.footer {
+  text-align: end;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.font {
+  font-size: 100px;
+}
