--- a/style/css/section.css
+++ b/style/css/section.css
@@ -1,8 +1,9 @@
 section {
   margin: 0 auto;
   margin-top: 50px;
-  width: 600px;
+  width: 570px;
   text-align: center;
+  /* background-image: url("https://cdn.herenow.city/assets/uploads/sites/9/2019/02/19163424/73perhaps01-765x511.jpg"); */
 }
 
 section {
