--- a/style/css/section.css
+++ b/style/css/section.css
@@ -11,4 +11,6 @@ section {
   background-color: rgb(227, 255, 255);
   padding-top: 30px;
   padding-bottom: 30px;
+  font-size: 20px;
+  font-weight: bolder;
 }
