--- a/style/css/section.css
+++ b/style/css/section.css
@@ -1,14 +1,15 @@
 section {
   margin: 0 auto;
   margin-top: 50px;
+
   width: 590px;
   text-align: center;
   /* background-image: url("https://cdn.herenow.city/assets/uploads/sites/9/2019/02/19163424/73perhaps01-765x511.jpg"); */
 }
 
 section {
-  border: 0.5px solid rgba(128, 128, 128, 0.25);
-  background-color: rgb(227, 255, 255);
+  border: 1px solid grey;
+  background-color: rgb(242, 242, 245);
   padding-top: 30px;
   padding-bottom: 30px;
   font-size: 20px;
