--- a/style/css/dropdown.css
+++ b/style/css/dropdown.css
@@ -8,16 +8,20 @@ body {
   margin: 0;
   padding: 5px;
   list-style-type: none;
+  text-align: center;
 }
 
 #main-menu > li {
   float: left;
+  width: 110px;
 }
 
 #main-menu > li > a {
   display: block;
   padding: 8px 16px;
   text-align: center;
+  color: rgba(255, 255, 255, 0.85);
+  border-right: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 #sub-menu {
