--- a/style/css/statics.css
+++ b/style/css/statics.css
@@ -1,11 +1,11 @@
 th {
   font-size: 14px;
-  border: 1px solid black;
+  border: 1px solid grey;
 }
 
 td {
   padding: 7.5px 7.5px 7.5px 7.5px;
-  border: 1px solid black;
+  border: 1px solid grey;
   justify-content: center;
   align-items: center;
 }
@@ -22,10 +22,4 @@ tr > td {
 
 .margin-top {
   margin-top: 20px;
-}
-input {
-  padding: 5px 10px 5px 10px;
-  border: 0;
-  background-color: rgb(155, 160, 169);
-  color: black;
 }
