--- a/style/css/section.css
+++ b/style/css/section.css
@@ -21,3 +21,10 @@ section {
 
   margin-right: auto;
 }
+
+input {
+  padding: 5px 10px 5px 10px;
+  border: 0;
+  background-color: rgb(155, 160, 169);
+  color: black;
+}
