--- a/style/css/dropdown.css
+++ b/style/css/dropdown.css
@@ -3,10 +3,17 @@ body {
   padding: 0;
 }
 
-#main-menu,
-#sub-menu {
+#main-menu {
   margin: 0;
   padding: 5px;
+  list-style-type: none;
+  text-align: center;
+}
+
+#sub-menu {
+  margin: 0;
+  padding: 0px;
+  width: 110px;
   list-style-type: none;
   text-align: center;
 }
@@ -21,22 +28,25 @@ body {
   padding: 8px 16px;
   text-align: center;
   color: rgba(255, 255, 255, 0.85);
-  border-right: 1px solid rgba(0, 0, 0, 0.15);
+  /* border-right: 1px solid rgba(0, 0, 0, 0.15); */
 }
 
 #sub-menu {
   position: absolute;
   opacity: 0;
   visibility: hidden;
+  float: left;
+  width: 110px;
 }
 
 #sub-menu > li {
   padding: 10px 5px 5px 5px;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid grey;
+  background-color: rgb(53, 71, 125);
 }
 
 #sub-menu > li > a {
-  color: black;
+  color: rgb(225, 228, 236);
   text-decoration: none;
   font-weight: bold;
 }
