--- a/style/css/footer.css
+++ b/style/css/footer.css
@@ -3,8 +3,8 @@
   text-align: center;
   font-size: 15px;
   font-weight: bolder;
-  background-color: black;
-  color: white;
+  background-color: rgb(53, 71, 125);
+  color: rgb(225, 228, 236);
   position: absolute;
   bottom: 0;
   right: 0;
